force-app/main/default/objects/AWS_File_Event__e/AWS_File_Event__e.object-meta.xml
<CustomObject>
    <label>AWS File Event</label>
    <pluralLabel>AWS File Events</pluralLabel>
</CustomObject>