force-app/main/default/objects/AWS_File_Event__e/fields/bucket__c.field-meta.xml
<CustomField>
    <fullName>bucket__c</fullName>
    <label>Bucket</label>
    <length>100</length>
    <type>Text</type>
</CustomField>