force-app/main/default/objects/AWS_File_Event__e/fields/etag__c.field-meta.xml
<CustomField>
    <fullName>etag__c</fullName>
    <label>ETag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>