force-app/main/default/objects/AWS_File_Event__e/fields/fileKey__c.field-meta.xml
<CustomField>
    <fullName>fileKey__c</fullName>
    <label>File Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>