force-app/main/default/objects/AWS_File_Event__e/fields/requester__c.field-meta.xml
<CustomField>
    <fullName>requester__c</fullName>
    <label>Requester</label>
    <length>100</length>
    <type>Text</type>
</CustomField>