force-app/main/default/objects/AWS_File_Event__e/fields/size__c.field-meta.xml
<CustomField>
    <fullName>size__c</fullName>
    <label>Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>